--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,11 @@
     <title>React App</title>
   </head>
   <body>
-
-    <div id="root"></div>
     
+    <div class="container">
+
+      <div id="root"></div>
+
+    </div>
   </body>
 </html>
